Change font linkes

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     content="پارس پک ارائه دهنده خدمات ابری در ایران؛ از سال 1388، با ارائه: انواع: سرور، هاست، گواهی SSL، دامنه ، ابر و ... شروع به کار کرد.">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>پارسپک اولین ارائه دهنده خدمات میزبانی ابری در ایران - پارس پک</title>
+  <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v27.0.2/dist/font-face.css" rel="stylesheet"
+    type="text/css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
 </head>
 
